<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_below="@+id/singInUpLayout"
    android:paddingStart="32dp"
    android:paddingEnd="32dp"
    android:paddingTop="32dp"
    android:background="@android:color/transparent">

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:elevation="5dp"
        android:textColorHint="@android:color/darker_gray"
        android:drawableLeft="@drawable/ic_person_black_24dp"
        android:drawablePadding="8dp"
        android:background="@drawable/edittext_background"
        android:padding="8dp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:elevation="5dp"
        android:layout_marginTop="24dp"
        android:textColorHint="@android:color/darker_gray"
        android:drawableLeft="@drawable/ic_person_outline_black_24dp"
        android:drawablePadding="8dp"
        android:background="@drawable/edittext_background"
        android:padding="8dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:elevation="5dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="@android:color/darker_gray"
        android:drawableLeft="@drawable/ic_vpn_key_black_24dp"
        android:drawablePadding="8dp"
        android:background="@drawable/edittext_background"
        android:padding="8dp" />

    <EditText
        android:id="@+id/reTypePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/retype_password"
        android:elevation="5dp"
        android:inputType="textPassword"
        android:textColorHint="@android:color/darker_gray"
        android:drawableLeft="@drawable/ic_vpn_key_black_24dp"
        android:drawablePadding="8dp"
        android:background="@drawable/edittext_background"
        android:padding="8dp" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/sign_up"
        android:textColor="@color/colorPrimary"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:background="@drawable/button_background" />

</LinearLayout>