<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/main_background"
    android:paddingStart="32dp"
    android:paddingEnd="32dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@android:color/white"
            android:layout_centerHorizontal="true" />

        <LinearLayout
            android:id="@+id/singInUpLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/titleText"
            android:layout_marginTop="48dp">

            <TextView
                android:id="@+id/singInText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@android:color/white"
                android:text="@string/sign_in"
                android:padding="8dp"
                android:textAllCaps="true"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/singUpText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@android:color/darker_gray"
                android:text="@string/sign_up"
                android:padding="8dp"
                android:textAllCaps="true"
                android:textAlignment="center" />

        </LinearLayout>

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/singInUpLayout"
            android:layout_marginTop="48dp" />

    </RelativeLayout>

</RelativeLayout>